@@ -84,9 +84,8 @@ public class BisqTextArea extends TextArea {
     @Override
     protected void layoutChildren() {
         Node lookupNode = lookup(SELECTOR_SCROLL_PANE);
-        if (lookupNode instanceof ScrollPane) {
-            ScrollPane selectorScrollPane = (ScrollPane) lookupNode;
-            if (!selectorScrollPane.getChildrenUnmodifiable().isEmpty()) {
+        if (lookupNode instanceof ScrollPane scrollPane) {
+            if (!scrollPane.getChildrenUnmodifiable().isEmpty()) {
                 try {
                     super.layoutChildren();
                 } catch (Throwable t) {
@@ -96,20 +95,18 @@ public class BisqTextArea extends TextArea {
             }
 
             if (!initialized) {
-                this.selectorScrollPane = selectorScrollPane;
+                this.selectorScrollPane = scrollPane;
                 Node lookupTextNode = lookup(SELECTOR_TEXT);
-                if (lookupTextNode instanceof Text) {
-                    Text aTextNode = (Text) lookupTextNode;
+                if (lookupTextNode instanceof Text aTextNode) {
                     // If we use a promptText the input field is not the aTextNode we find by the lookup,
                     // but it's inside a region... A pain to work with those closed components... 
                     Parent parent = aTextNode.getParent();
                     parent.setStyle("-fx-background-color: transparent; -fx-border-color: transparent");
                     if (parent.getChildrenUnmodifiable().size() == 4) {
                         Node thirdNode = parent.getChildrenUnmodifiable().get(2);
-                        if (thirdNode instanceof Group) {
-                            Group group = (Group) thirdNode;
+                        if (thirdNode instanceof Group group) {
                             if (!group.getChildren().isEmpty()) {
-                                Node node = group.getChildren().get(0);
+                                Node node = group.getChildren().getFirst();
                                 if (node instanceof Text) {
                                     this.selectorText = (Text) node;
                                 }
@@ -119,7 +116,7 @@ public class BisqTextArea extends TextArea {
                         this.selectorText = aTextNode;
                     }
                     textProperty().addListener(textChangeListener);
-                    selectorScrollPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
+                    scrollPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
                     adjustHeight();
                     initialized = true;
                 }
