@@ -109,8 +109,8 @@ public class TakeOfferController extends NavigationController implements InitWit
         } else {
             checkArgument(baseSidePaymentMethodSpecs.size() == 1);
             checkArgument(quoteSidePaymentMethodSpecs.size() == 1);
-            takeOfferReviewController.setBitcoinPaymentMethodSpec(baseSidePaymentMethodSpecs.get(0));
-            takeOfferReviewController.setFiatPaymentMethodSpec(quoteSidePaymentMethodSpecs.get(0));
+            takeOfferReviewController.setBitcoinPaymentMethodSpec(baseSidePaymentMethodSpecs.getFirst());
+            takeOfferReviewController.setFiatPaymentMethodSpec(quoteSidePaymentMethodSpecs.getFirst());
         }
         model.getChildTargets().add(NavigationTarget.TAKE_OFFER_REVIEW);
     }
@@ -121,7 +121,7 @@ public class TakeOfferController extends NavigationController implements InitWit
         overlayController.setEnterKeyHandler(null);
         overlayController.getApplicationRoot().addEventHandler(KeyEvent.KEY_PRESSED, onKeyPressedHandler);
 
-        model.getSelectedChildTarget().set(model.getChildTargets().get(0));
+        model.getSelectedChildTarget().set(model.getChildTargets().getFirst());
         model.getBackButtonText().set(Res.get("action.back"));
         model.getNextButtonVisible().set(true);
         takersBaseSideAmountPin = EasyBind.subscribe(takeOfferAmountController.getTakersBaseSideAmount(),
@@ -160,28 +160,24 @@ public class TakeOfferController extends NavigationController implements InitWit
 
     @Override
     protected Optional<? extends Controller> createController(NavigationTarget navigationTarget) {
-        switch (navigationTarget) {
-            case TAKE_OFFER_AMOUNT: {
+        return switch (navigationTarget) {
+            case TAKE_OFFER_AMOUNT -> {
                 if (!model.isAmountVisible()) {
                     Navigation.navigateTo(NavigationTarget.TAKE_OFFER_PAYMENT);
-                    return Optional.empty();
+                    yield Optional.empty();
                 }
-                return Optional.of(takeOfferAmountController);
+                yield Optional.of(takeOfferAmountController);
             }
-            case TAKE_OFFER_PAYMENT: {
+            case TAKE_OFFER_PAYMENT -> {
                 if (!model.isPaymentMethodVisible()) {
                     Navigation.navigateTo(NavigationTarget.TAKE_OFFER_REVIEW);
-                    return Optional.empty();
+                    yield Optional.empty();
                 }
-                return Optional.of(takeOfferPaymentController);
+                yield Optional.of(takeOfferPaymentController);
             }
-            case TAKE_OFFER_REVIEW: {
-                return Optional.of(takeOfferReviewController);
-            }
-            default: {
-                return Optional.empty();
-            }
-        }
+            case TAKE_OFFER_REVIEW -> Optional.of(takeOfferReviewController);
+            default -> Optional.empty();
+        };
     }
 
     void onNext() {
