@@ -45,7 +45,6 @@ import lombok.Getter;
 
 import java.util.Comparator;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class ReputationDetailsPopup extends VBox {
     private final BisqTableView<ListItem> tableView;
@@ -64,7 +63,7 @@ public class ReputationDetailsPopup extends VBox {
                                 data.getBlockTime(),
                                 proofOfBurnService.calculateScore(data),
                                 data.getAmount()))
-                        .collect(Collectors.toList())));
+                        .toList()));
 
         BondedReputationService bondedReputationService = reputationService.getBondedReputationService();
         Optional.ofNullable(bondedReputationService.getDataSetByHash().get(userProfile.getBondedReputationKey()))
@@ -74,7 +73,7 @@ public class ReputationDetailsPopup extends VBox {
                                 bondedReputationService.calculateScore(data),
                                 Optional.of(data.getAmount()),
                                 Optional.of(data.getLockTime())))
-                        .collect(Collectors.toList())));
+                        .toList()));
 
         AccountAgeService accountAgeService = reputationService.getAccountAgeService();
         Optional.ofNullable(accountAgeService.getDataSetByHash().get(userProfile.getAccountAgeKey()))
@@ -82,14 +81,14 @@ public class ReputationDetailsPopup extends VBox {
                         .map(data -> new ListItem(ReputationSource.BISQ1_ACCOUNT_AGE,
                                 data.getDate(),
                                 accountAgeService.calculateScore(data)))
-                        .collect(Collectors.toList())));
+                        .toList()));
         SignedWitnessService signedWitnessService = reputationService.getSignedWitnessService();
         Optional.ofNullable(signedWitnessService.getDataSetByHash().get(userProfile.getSignedWitnessKey()))
                 .ifPresent(dataSet -> listItems.addAll(dataSet.stream()
                         .map(data -> new ListItem(ReputationSource.BISQ1_SIGNED_ACCOUNT_AGE_WITNESS,
                                 data.getWitnessSignDate(),
                                 signedWitnessService.calculateScore(data)))
-                        .collect(Collectors.toList())));
+                        .toList()));
 
         ProfileAgeService profileAgeService = reputationService.getProfileAgeService();
         Optional.ofNullable(profileAgeService.getDataSetByHash().get(userProfile.getProfileAgeKey()))
@@ -97,7 +96,7 @@ public class ReputationDetailsPopup extends VBox {
                         .map(data -> new ListItem(ReputationSource.PROFILE_AGE,
                                 data.getDate(),
                                 profileAgeService.calculateScore(data)))
-                        .collect(Collectors.toList())));
+                        .toList()));
 
         tableView = new BisqTableView<>(listItems);
         setPrefHeight(500);
