@@ -169,12 +169,10 @@ public class UserProfileController implements Controller {
             return;
         }
         userIdentityService.editUserProfile(model.getSelectedUserIdentity().get(), model.getTerms().get(), model.getStatement().get())
-                .thenAccept(result -> {
-                    UIThread.runOnNextRenderFrame(() -> {
-                        UserIdentity value = userIdentityService.getSelectedUserIdentity();
-                        model.getSelectedUserIdentity().set(value);
-                    });
-                });
+                .thenAccept(result -> UIThread.runOnNextRenderFrame(() -> {
+                    UserIdentity value = userIdentityService.getSelectedUserIdentity();
+                    model.getSelectedUserIdentity().set(value);
+                }));
     }
 
     private boolean noNewChangesToBeSaved(UserIdentity userIdentity) {
@@ -208,7 +206,7 @@ public class UserProfileController implements Controller {
                     } else {
                         if (!model.getUserIdentities().isEmpty()) {
                             UIThread.runOnNextRenderFrame(() -> {
-                                UserIdentity value = model.getUserIdentities().get(0);
+                                UserIdentity value = model.getUserIdentities().getFirst();
                                 model.getSelectedUserIdentity().set(value);
                             });
                         }
